// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) Tagged templates are not supporte…' > expectation 1`] = `
"//----------------------------------------------------------|
printWidth=60 (in snapshot)
<script>
  const classes = tw\`lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit eu posuere eu volutpat id neque pellentesque\`;
</script>
"
`;

exports[`'(2) Tagged templates are supported by…' > expectation 1`] = `
"//----------------------------------------------------------|
printWidth=60 (in snapshot)
<script>
  const classes = tw\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
  ex massa hendrerit eu posuere eu volutpat id neque
  pellentesque\`;
</script>
"
`;

exports[`'(3) If a tagged template is written a…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={tw\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere eu volutpat id neque
        pellentesque\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(4) If the tag function name is \`css\`…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={css\`lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit eu posuere eu volutpat id neque pellentesque\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(5) If the tag function name is \`css\`…' > expectation 1`] = `
"<!-- -------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={css\`lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit eu posuere eu volutpat id neque pellentesque\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;
